manifests-failed/base-0.1.0.tgz-manifest.yaml
---
# Source: base/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release
  namespace: base-0.1.0.tgz
  labels:
    app: my-release
    version: env-name
    repo-name: none
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: base-0.1.0
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: my-release
    version: env-name
---
# Source: base/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release
  namespace: base-0.1.0.tgz
  annotations:
    gitUrl: https://github.com/urbanindo/99-charts.git
    kubernetes.io/change-cause: CHANGE_CAUSE_MESSAGE
    sidecar.istio.io/inject: "true"
  labels:
    app: my-release
    version: env-name
    repo-name: none
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: base-0.1.0
spec:
  selector:
    matchLabels:
      app: my-release
      version: env-name
  template:
    metadata:
      annotations:
        gitUrl: https://github.com/urbanindo/99-charts.git
        kubernetes.io/change-cause: CHANGE_CAUSE_MESSAGE
        sidecar.istio.io/inject: "true"
      labels:
        app: my-release
        version: env-name
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: my-release
          securityContext:
            {}
          image: "nginx:latest"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /targetPath
              name: configName
              subPath: fileName          
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              memory: 1024M
            requests:
              cpu: 40m
              memory: 363Mi
      volumes:
        - configMap:
            items:
            - key: fileName
              path: fileName
            name: configName
          name: configName
---
# Source: base/templates/destinationrules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: my-release
  namespace: base-0.1.0.tgz
spec:
  host: my-release.base-0.1.0.tgz.svc.cluster.local
  subsets:
  - labels:
      version: env-name
    name: v1
    trafficPolicy:
      portLevelSettings:
      - port:
          number: 80
        loadBalancer:
          simple: LEAST_CONN
---
# Source: base/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-release
  namespace: base-0.1.0.tgz
spec:
  hosts:
  - my-release.base-0.1.0.tgz.svc.cluster.local
  http:
  - route:
    - destination:
        host: my-release.base-0.1.0.tgz.svc.cluster.local
        subset: v1
---
# Source: base/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "my-release-base-test-connection"
  labels:
    app: my-release
    version: env-name
    repo-name: none
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: base-0.1.0
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['my-release-base:']
  restartPolicy: Never
